--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.3.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -24,6 +25,7 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
