--- a/package.json
+++ b/package.json
@@ -16,24 +16,33 @@
     "@clerk/nextjs": "^5.7.1",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.3.0",
+    "@hookform/resolvers": "^3.9.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@neondatabase/serverless": "^0.9.5",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.6.3",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
+    "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-use": "^17.5.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
