--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.8.0",
